src/css/style.css
/* ... */
@keyframes pulse {
  0% {
    -webkit-transform: scale(1);
            transform: scale(1);
  }
  50% {
    -webkit-transform: scale(1.1);
            transform: scale(1.1);
  }
  100% {
    -webkit-transform: scale(1);
            transform: scale(1);
  }
}
#app {
  width: 100%;
  max-width: 650px;
  min-height: 600px;
  height: auto;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  margin: 0 auto;
}
header {
  position: relative;
}
#app-header {
  -ms-flex-negative: 0;
      flex-shrink: 0;
  color: var(--color-primary);
  font-size: 36px;
  font-family: "Montserrat", sans-serif;
  font-weight: 900;
  margin-bottom: 18px;
  text-align: center;
}
#app-wrap {
  -webkit-box-flex: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
  padding-bottom: 95px;
  position: relative;
}
#app-footer {
  -ms-flex-negative: 0;
      flex-shrink: 0;
  color: var(--color-primary);
  text-align: center;
  padding: 45px 0 25px;
  opacity: 40%;
}
#app-footer p {
  margin: 0;
}
#app-footer-fw_ver {
  font-size: smaller;
}

#logo {
  width: 100px;
  height: 24px;
  fill: var(--color-primary);
  margin-bottom: 10px;
}

#language-switcher {
  position: absolute;
  right: 0;
  top: 1em;
}

.language-switcher > ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.language-switcher > ul > li {
  margin: 0;
  list-style-type: none;
  display: inline-block;
  color: #0c3c3d;
  border: 0;
}

.language-switcher > ul > li:last-child {
  border-right: 0;
}

.language-switcher > ul > li > a {
  cursor: default;
  color: var(--color-primary);
  padding: 0 0.3em 0 0;
  margin: 0;
  border: 0;
  border-right: 1px solid rgb(29, 180, 167);
}

.language-switcher > ul > li > a.language-switcher-active {
  color: var(--color-text);
}

.language-switcher > ul > li:last-child > a {
  border-right: 0;
}

.language-switcher > ul > li > a:hover {
  cursor: pointer;
}
.language-switcher > ul > li > a.language-switcher-active:hover {
  cursor: default;
}

section {
  height: 100%;
  min-height: 100%;
}

#page-software_update_progress,
#page-finished {
  margin-bottom: -95px;
}

a {
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

h1, h2, h3, h4, h5, h6 {
  line-height: 1;
  margin-top: 0;
  margin-bottom: 1em;
}

h1 {
  font-size: 18px;
  font-weight: 600;
  font-style: italic;
  margin-bottom: 32px;
  text-align: center;
}

h2 {
  font-size: 16px;
  font-weight: 800;
}

h3 {
  font-size: 16px;
  font-weight: 600;
  font-style: italic;
}

p {
  margin-top: 0;
}

[lang=fi] {
  display: none;
}

.hidden {
  display: none;
}

table {
  width: 100%;
}

.font-bold {
  font-weight: 600;
}

.indent {
  margin-left: 28px;
}

fieldset {
  border: none;
  margin: 0;
  padding: 0;
}

progress {
  width: 100%;
  max-width: 355px;
  height: 4px;
  background-color: rgba(0, 208, 186, 0.2);
  border: none;
  padding: 0;
  margin: 14px 0 10px;
}
progress[value]::-webkit-progress-bar {
  background-color: rgba(0, 208, 186, 0.2);
}
progress[value]::-webkit-progress-value {
  background-color: var(--color-primary);
}

.progressbar-container {
  margin-bottom: 34px;
}

.progressbar {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  margin: 0 -2.5px;
  padding: 0;
}
.progressbar li {
  -webkit-box-flex: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
  height: 4px;
  position: relative;
  background-color: var(--color-primary-20);
  margin: 0 2.5px;
}
.progressbar li.active {
  background-color: var(--color-primary);
}

/*============================================*/
.button-container {
  width: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  position: absolute;
  bottom: 0;
  left: 0;
}

.btn {
  min-width: 155px;
  display: inline-block;
  background-color: var(--color-primary);
  color: white;
  font-family: "Montserrat", sans-serif;
  font-size: 14px;
  font-weight: 800;
  letter-spacing: 1px;
  line-height: 1;
  border: none;
  border-radius: 30px;
  padding: 14px 30px;
  white-space: nowrap;
  cursor: pointer;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  -webkit-transition: background-color 0.2s, color 0.2s, border-color 0.2s;
  transition: background-color 0.2s, color 0.2s, border-color 0.2s;
}
.btn:hover, .btn:focus, .btn:active {
  background-color: var(--color-primary-hover);
  color: white;
}
.btn.disable-click {
  pointer-events: none;
  opacity: 40%;
}

.block-centered .btn {
  margin: 0 auto;
}

.weekday-btn-group {
  margin-bottom: 30px;
}

.btn-back {
  background: transparent;
  color: var(--color-primary);
  text-align: center;
  letter-spacing: 1px;
  padding: 8px 20px;
  white-space: nowrap;
}
.btn-back:hover {
  color: var(--color-primary-hover);
}

.btn-dropdown {
  width: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  margin: 14px 0;
  text-decoration: none;
  cursor: pointer;
}
.btn-dropdown.disable-click {
  pointer-events: none;
  opacity: 40%;
}
.btn-dropdown h2 {
  margin: 0 20px 0 0;
  padding: 0;
}
/* ... */

